Changelog
=========


1.4.3 (unreleased)
------------------

- Add permissionmapping for ftw.lawgiver
  [elioschmutz]

- Fix JS toggling of meeting content.
  [treinhard]

- Avoid exception with PDF generation if 'head_of_meeting'
  (or another field that uses a vocabulary) is empty.
  [treinhard]


1.4.2 (2013-03-11)
------------------

- Replace jq by $.
  [mathias.leimgruber]

- Use local text formatting command \textbf instead of {\bf }.
  [jone]


1.4.1 (2013-01-21)
------------------

- Use safe-html-transform for textfields (Secure audit).
  [mathias.leimgruber]

- PDF: handle empty field value conversion.
  [jone]

- Workspace details PDF: do not show empty listings.
  [jone]

- Start date can not be set after end date anymore.
  [Julian Infanger]


1.4 (2012-10-16)
----------------

- Improved meeting item css and markup.
  [Julian Infanger]

- Fix translation (vcal -> ical).
  [mathias.leimgruber]

- Move start/end date after title.
  [mathias.leimgruber]

- Only auto-fill end_date if end_date is no set.
  [mathias.leimgruber]


1.3.8 (2012-08-20)
------------------

- Disable setting default page for Meeting and MeetingItem.
  Those types are not normal folders and setting the default page is therefore not common.
  [jone]

- Remove base_view from allowed Meeting views.
  [jone]


1.3.7 (2012-06-21)
------------------

- Task PDF: increase width of status column.
  [jone]


1.3.6 (2012-06-13)
------------------

- PDF: Fix newlines in task listing table.
  [jone]

- PDF: Support contacts or other objects as responsibility of tasks.
  [jone]


1.3.5 (2012-06-11)
------------------

- Meeting item PDF: escape urls of related items, so that spaces (%) do not break LaTeX.
  [jone]

- Meeting item: remove some css-classes for fixing bad styling when there are nested tables.
  [jone]


1.3.3 (2012-05-09)
------------------

- Improve LaTeX PDF layout and German translation.
  [jone]

- Fix handler for meeting item reorder.
  [mathias.leimgruber]
